[project]
name = "singer-sdk"
dynamic = [
    "version"
]
description = "A framework for building Singer taps"
authors = [{ name = "Meltano Team and Contributors", email = "hello@meltano.com" }]
maintainers = [{ name = "Meltano Team and Contributors", email = "hello@meltano.com" }]
urls.Homepage = "https://sdk.meltano.com/en/latest/"
urls.Repository = "https://github.com/meltano/sdk"
urls.Documentation = "https://sdk.meltano.com/en/latest/"
urls."Issue Tracker" = "https://github.com/meltano/sdk/issues"
urls."Twitter" = "https://twitter.com/meltanodata/"
urls."Changelog" = "https://github.com/meltano/sdk/blob/main/CHANGELOG.md"
urls."Slack" = "https://meltano.com/slack"
urls."Youtube" = "https://www.youtube.com/meltano"
keywords = [
    "Meltano",
    "Singer",
    "Meltano SDK",
    "Singer SDK",
    "ELT",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
dependencies = [
    "backoff>=2.0.0,<4; python_version<'4'",
    "backports-datetime-fromisoformat>=2.0.1,<3.11; python_version<'3.11'",
    "click~=8.0",
    "fs>=2.4.16",
    "importlib-metadata<9.0.0; python_version<'3.12'",
    "importlib-resources>=5.12.0,!=6.2.0,!=6.3.0,!=6.3.1; python_version<'3.10'",
    "inflection>=0.5.1",
    "joblib>=1.3.0",
    "jsonpath-ng>=1.5.3",
    "jsonschema>=4.16.0",
    "packaging>=23.1",
    "pendulum>=2.1.0,<4",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.20",
    "PyYAML>=6.0",
    "referencing>=0.30.0",
    "requests>=2.25.1",
    "simpleeval>=0.9.13",
    "simplejson>=3.17.6",
    "sqlalchemy>=1.4,<3.0",
    "typing-extensions>=4.5.0",
    # urllib3 2.0 is not compatible with botocore
    "urllib3>=1.26,<2",
]
optional-dependencies.docs = [
    "furo>=2024.5.6; python_version>='3.9'",
    "myst-parser>=3; python_version>='3.9'",
    "pytest>=7.2.1; python_version>='3.9'",
    "sphinx>=7; python_version>='3.9'",
    "sphinx-copybutton>=0.5.2; python_version>='3.9'",
    "sphinx-inline-tabs>=2023.4.21; python_version>='3.9'",
    "sphinx-notfound-page>=1.0.0; python_version>='3.9'",
    "sphinx-reredirects>=0.1.5; python_version>='3.9'",
]
optional-dependencies.s3 = [
    "fs-s3fs>=1.1.1",
]
optional-dependencies.jwt = [
    "cryptography>=3.4.6",
    "PyJWT~=2.4",
]
optional-dependencies.parquet = [
    "numpy>=1.22,<1.25; python_version<'3.9'",
    "numpy>=1.22; python_version>='3.9'",
    "pyarrow>=13",
]
optional-dependencies.testing = [
    "pytest>=7.2.1",
    "pytest-durations>=1.2.0",
]
optional-dependencies.faker = [
    "faker>=22.5,<27.0",
]

[project.entry-points."pytest11"]
singer_testing = "singer_sdk.testing.pytest_plugin"

[project.entry-points."singer_sdk.batch_encoders"]
jsonl = "singer_sdk.contrib.batch_encoder_jsonl:JSONLinesBatcher"
parquet = "singer_sdk.contrib.batch_encoder_parquet:ParquetBatcher"

[tool.poetry]
# TODO: remove this duplicate name when nox-poetry supports PEP 621
# https://github.com/cjolowicz/nox-poetry/pull/1223
name = "singer-sdk"
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = ">=7.4"}
deptry = ">=0.15.0"

duckdb = ">=0.8.0"
duckdb-engine = { version = ">=0.9.4", python = "<4" }

fastjsonschema = ">=2.19.1"
pytest-benchmark = ">=4.0.0"
pytest-snapshot = ">=0.9.0"
pytz = ">=2022.2.1"
requests-mock = ">=1.10.0"
rfc3339-validator = ">=0.1.4"
time-machine = ">=2.10.0"
xdoctest = ">=1.1.1"

[tool.poetry.group.typing.dependencies]
mypy = ">=1.9"
types-jsonschema = ">=4.17.0.6"
types-python-dateutil = ">=2.8.19"
types-pytz = ">=2022.7.1.2"
types-requests = ">=2.28.11"
types-simplejson = ">=3.18.0"
types-PyYAML = ">=6.0.12"

[tool.poetry.group.benchmark.dependencies]
pytest-codspeed = ">=2.2.0"

[tool.pytest.ini_options]
addopts = '--ignore=singer_sdk/helpers/_simpleeval.py -m "not external"'
filterwarnings = [
    "error",
    "ignore:Could not configure external gitlab tests:UserWarning",
    "ignore:No records were available to test:UserWarning",
    # https://github.com/meltano/sdk/issues/1354
    "ignore:The function singer_sdk.testing.get_standard_tap_tests is deprecated:DeprecationWarning",
    # https://docs.python.org/3.12/whatsnew/3.12.html#deprecated
    # https://github.com/danthedeckie/simpleeval/blob/master/simpleeval.py
    "ignore:ast.NameConstant is deprecated:DeprecationWarning:simpleeval",
    # https://docs.python.org/3.12/whatsnew/3.12.html#deprecated
    # https://github.com/danthedeckie/simpleeval/blob/master/simpleeval.py
    "ignore:ast.Num is deprecated:DeprecationWarning:simpleeval",
    # https://github.com/joblib/joblib/pull/1518
    "ignore:ast.Num is deprecated:DeprecationWarning:joblib._utils",
    # https://docs.python.org/3.12/whatsnew/3.12.html#deprecated
    # https://github.com/danthedeckie/simpleeval/blob/master/simpleeval.py
    "ignore:ast.Str is deprecated:DeprecationWarning:simpleeval",
    # https://github.com/joblib/joblib/pull/1518
    "ignore:Attribute n is deprecated:DeprecationWarning:joblib._utils",
]
markers = [
    "external: Tests relying on external resources",
    "windows: Tests that only run on Windows",
    "snapshot: Tests that use pytest-snapshot",
]
testpaths = ["tests"]
norecursedirs = "cookiecutter"

[tool.commitizen]
name = "cz_version_bump"
version = "0.39.0"
changelog_merge_prerelease = true
prerelease_offset = 1
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "docs/conf.py:^release =",
    "cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml:singer-sdk",
    "cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml:singer-sdk",
    "cookiecutter/mapper-template/{{cookiecutter.mapper_id}}/pyproject.toml:singer-sdk",
    ".github/ISSUE_TEMPLATE/bug.yml:^      placeholder:",
]

[tool.coverage.paths]
source = [
    "singer_sdk/",
    "*/singer_sdk",
]
tests = [
    "tests/",
    "*/tests",
]

[tool.coverage.run]
branch = true
source = ["singer_sdk", "tests"]
relative_files = true  # This allows coverage to be measured in Windows
omit = [
    "tests/*",
    "samples/*",
    "singer_sdk/helpers/_compat.py",
    "singer_sdk/helpers/types.py",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    '''class .*\bProtocol\):''',
    '''@(abc\.)?abstractmethod''',
    '''if (t\.)?TYPE_CHECKING:''',
]
fail_under = 82
show_missing = true

[tool.deptry]
known_first_party = ["singer_sdk"]
pep621_dev_dependency_groups = ["testing"]

[tool.deptry.package_module_name_map]
backports-datetime-fromisoformat = "backports"
importlib-metadata = "importlib_metadata"
importlib-resources = "importlib_resources"
PyJWT = "jwt"
types-jsonschema = "jsonschema"
types-pytz = "pytz"
types-PyYAML = "yaml"
types-requests = "requests"

[tool.deptry.per_rule_ignores]
DEP002 = [
    # Deprecated dependencies
    "pendulum",
    "python-dateutil",
    # Transitive constraints
    "numpy",
    "urllib3",
    # Python version-specific dependencies
    "backports-datetime-fromisoformat",
    # Docs extras
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "sphinx-notfound-page",
    "sphinx-reredirects",
    # Plugins
    "fs-s3fs",
    "pytest-durations",
]

[tool.mypy]
exclude = "tests"
files = "singer_sdk"
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "backports.datetime_fromisoformat.*",
    "joblib.*",       # TODO: Remove when https://github.com/joblib/joblib/issues/1516 is shipped
    "jsonpath_ng.*",  # TODO: Remove when https://github.com/h2non/jsonpath-ng/issues/152 is implemented and released
    "pyarrow.*",      # TODO: Remove when https://github.com/apache/arrow/issues/32609 if implemented and released
]

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[build-system]
requires = [
    "poetry-core@ git+https://github.com/radoering/poetry-core.git@pep621-support",
    "poetry-dynamic-versioning==1.4.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
extend-exclude = [
    "cookiecutter/*",
    "*simpleeval*",
]
line-length = 88
src = ["samples", "singer_sdk", "tests"]
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
explicit-preview-rules = false
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in class method
    "N818",    # Exception name should be named with an Error suffix
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
preview = true
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle (error)
    "W",    # pycodestyle (warning)
    "C90",  # mccabe
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle/flake8-docstrings
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimezs
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PGH",  # pygrep-hooks
    "PLC",  # pylint (convention)
    "PLE",  # pylint (error)
    "PLR",  # pylint (refactor)
    "PLW",  # pylint (warning)
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "RUF",  # ruff
]
unfixable = [
    "ERA",  # Don't remove commented out code
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = [
    "D",      # pydocstyle/flake8-docstrings
    "I002",   # isort: missing-required-import
    "INP001", # flake8-no-pep420: implicit-namespace-package
]
"noxfile.py" = ["ANN"]
"tests/*" = [
    "ANN",
    "D1",
    "D2",
    "FBT001",
    "FBT003",
    "PLR2004",
    "S101",
    "SLF001",
    "PLC2701",  # Allow usage of private members in tests
    "PLR6301",  # Don't suggest making test methods static, etc.
]
# Disabled some checks in samples code
"samples/*" = ["ANN", "D"]
# Templates support a generic resource of type Any.
"singer_sdk/testing/*.py" = ["S101"]
"singer_sdk/testing/templates.py" = ["ANN401"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["sqlalchemy", "typing"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
sqlalchemy = "sa"
typing = "t"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pendulum".msg = "BAN002: pendulum is banned"

[tool.ruff.lint.isort]
known-first-party = ["singer_sdk", "samples", "tests"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "singer_sdk.cli.plugin_cli",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 9
