[project]
name = "tap-dummyjson"
version = "0.0.1"
description = "Singer tap for DummyJSON, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgar@arch.dev" }]
keywords = [
    "ELT",
    "DummyJSON",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "requests~=2.32.3",
    "singer-sdk",
]
optional-dependencies.s3 = [
    "fs-s3fs~=1.1.1",
]

[project.scripts]
# CLI declaration
tap-dummyjson = 'tap_dummyjson.tap:TapDummyJSON.cli'

[dependency-groups]
dev = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.uv.sources]
singer-sdk = { path = "../../", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
